# piano-synmist

./: LICENSE  MistakeBrowser.ipynb  README.md  README.mid  kv279_1.mid  label.mid  lowlvl.py  mididiff.py  mistake_by_type.py  pyproject.toml  region_classifier.py  sampling_prob.csv  simulate_mistakes.py  test.mid  tgt.mid  utils.py
labeled_dataset_adapters/: asap_adapter.py  asap_slowdown.py
score_beat_annotations/: b-09-score-beats-0564-1109.txt  b-09-score-beats-11-052-5-998.txt  b-10-score-beats-110-115.txt  b-10-score-beats-7-12.txt
test_files/: plot_lowlvl.py  test_lowlvl.py  test_lowlvl_segmented.py  test_visual_lowlvl.py  test_visual_lowlvl_segmented.py
