[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piano_synmist"
version = "0.0.2"
description = "A package for overlaying synthetic mistakes on midi piano performances"
readme = "README.md"
authors = [
    {name = "Alia Morsi", email = "morsi.alia@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alia-morsi/piano-synmist"
"Bug Tracker" = "https://github.com/yourusername/my-package/issues"

[tool.setuptools.package-dir]
piano_synmist = "."
